[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 1, 1, 0.15 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.08, 0.24, 0.39, 0.4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0588235, 0.184314, 0.290196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.113725, 0.305882, 0.478431, 1 )
shadow_color = Color( 0, 0, 0, 0.35 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.364706, 0.65098, 0.862745, 1 )

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="DialogueBox" type="ColorRect" parent="."]
margin_left = 233.0
margin_top = 535.0
margin_right = 1074.0
margin_bottom = 826.0
color = Color( 0.364706, 0.65098, 0.862745, 1 )

[node name="NextButton" type="Button" parent="DialogueBox"]
margin_left = 717.0
margin_top = 225.0
margin_right = 839.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( -1049, -643 )
action_mode = 0
flat = true

[node name="Label" type="Label" parent="DialogueBox/NextButton"]
anchor_top = 0.274
anchor_bottom = 0.274
margin_left = 16.0
margin_top = -1.09802
margin_right = 110.0
margin_bottom = 34.902
custom_fonts/font = ExtResource( 6 )
text = "NEXT"
align = 1

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 43.0
margin_top = 26.0
margin_right = 714.0
margin_bottom = 217.0
custom_fonts/normal_font = ExtResource( 7 )

[node name="SpeakerBox" type="ColorRect" parent="DialogueBox"]
margin_left = 841.0
margin_right = 1121.0
margin_bottom = 291.0
color = Color( 0.0156863, 0.278431, 0.407843, 1 )

[node name="Border" type="Panel" parent="DialogueBox/SpeakerBox"]
margin_left = 26.0
margin_top = 12.0
margin_right = 252.0
margin_bottom = 251.0
custom_styles/panel = SubResource( 5 )

[node name="Speaker" type="TextureRect" parent="DialogueBox/SpeakerBox/Border"]
margin_left = 2.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 237.0
stretch_mode = 5

[node name="SpeakerName" type="RichTextLabel" parent="DialogueBox/SpeakerBox"]
margin_left = -2.0
margin_top = 251.0
margin_right = 284.0
margin_bottom = 296.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true

[node name="Option0" type="Button" parent="DialogueBox"]
margin_top = 20.0
margin_right = 841.0
margin_bottom = 90.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )

[node name="Label" type="Label" parent="DialogueBox/Option0"]
margin_right = 841.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="Option1" type="Button" parent="DialogueBox"]
margin_top = 91.0
margin_right = 841.0
margin_bottom = 161.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )

[node name="Label" type="Label" parent="DialogueBox/Option1"]
margin_right = 841.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="Option2" type="Button" parent="DialogueBox"]
margin_top = 161.0
margin_right = 841.0
margin_bottom = 231.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )

[node name="Label" type="Label" parent="DialogueBox/Option2"]
margin_right = 841.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="DialogueBox/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="DialogueBox/Option0" to="." method="_on_Option_pressed" binds= [ 0 ]]
[connection signal="pressed" from="DialogueBox/Option1" to="." method="_on_Option_pressed" binds= [ 1 ]]
[connection signal="pressed" from="DialogueBox/Option2" to="." method="_on_Option_pressed" binds= [ 2 ]]
